refactor: adjust nationality and rename email